<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".userInterface.activities.SubmitProjectActivity"
    android:id="@+id/submitProjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/appBar">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/toolbar"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:text="@string/project_submission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorAccent"
        android:id="@+id/tvProjectSubmission"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/gradient_line"
        app:layout_constraintTop_toBottomOf="@id/tvProjectSubmission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:id="@+id/lineView"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lineView"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:hint="@string/first_name"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:paddingEnd="60dp"
        android:textStyle="bold"
        android:id="@+id/etFirstName"
        tools:ignore="RtlSymmetry"
        android:inputType="textPersonName"
        android:autofillHints="@string/first_name" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lineView"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toEndOf="@id/etFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/last_name"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:paddingEnd="60dp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        tools:ignore="RtlSymmetry"
        android:id="@+id/etLastName"
        android:inputType="textPersonName"
        android:autofillHints="@string/first_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etFirstName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email_address"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:id="@+id/etEmailAddress"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/email_address" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etEmailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/project_on_github_link"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:id="@+id/etProjectLink"
        android:inputType="text"
        android:autofillHints="@string/project_on_github_link" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etProjectLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="84dp"
        android:background="@drawable/rounded_button"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:textSize="20sp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:id="@+id/btSubmit"/>








</androidx.constraintlayout.widget.ConstraintLayout>